--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,32 @@
 body {
-    background-color: #c98949;
+    background-image: url("/images/pexels-magda-ehlers-pexels-985287.jpg");
+    background-size: cover;
+    overflow: scroll;
+}
+
+div.main {
+    margin-top: 20px;
+    margin-left: 7%;
+    margin-right: 7%;
+    background-color: rgb(0, 0, 0, 0.5);
+}
+
+div.main p {
+    color: white;
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    text-indent: 50px;
+    font-size: 1.2vw;
+}
+
+div.main h1 {
+    color: white;
+    margin-left: 10px;
+    font-size: 2vm;
+}
+
+div.main h1 img {
+    position: relative;
+    top: 20px;
 }
