--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,8 @@ div.main {
     margin-top: 20px;
     margin-left: 7%;
     margin-right: 7%;
+    margin-bottom: 7%;
+    overflow: auto;
     background-color: rgb(0, 0, 0, 0.5);
 }
 
@@ -16,7 +18,7 @@ div.main p {
     margin-top: 10px;
     margin-left: 20px;
     margin-right: 20px;
-    text-indent: 50px;
+    text-indent: 30px;
     font-size: 1.2vw;
 }
 
@@ -29,4 +31,25 @@ div.main h1 {
 div.main h1 img {
     position: relative;
     top: 20px;
+}
+
+a:link {
+  color: pink;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:visited {
+  color: pink;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
 }
