--- a/style/style.css
+++ b/style/style.css
@@ -33,6 +33,15 @@ div.main h1 img {
     top: 20px;
 }
 
+div.main iframe {
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    margin-top:50px;
+    margin-bottom:50px;
+}
+
+
 a:link {
   color: pink;
   background-color: transparent;
